--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <div class="brand">
             <div class="title center-align">
                 
-                    subtitle
+                    欧内斯特·海明威
                 
             </div>
 
